--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -145,14 +145,6 @@ h3{
       }
 }
 
-/* @media (min-width: 991.98px){
-    .hamburger--squeeze{
-        position: absolute;
-        display: none;
-        right: -100%;
-    }
-} */
-
 @media (max-width: 991.98px){
     .header_icon{
         position: absolute;
@@ -160,99 +152,9 @@ h3{
         right: 15%;
     }
 
-    .hamburger--squeeze{
-        position: absolute;
-        justify-content: center;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        margin: 0 auto;
-    }
 }
 
-@media (min-width: 575.98px) and (max-width: 991.98px){
-    .hamburger--squeeze{
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-}
-
-.hamburger {
-    display: none;
-    /* display: inline-block; */
-    cursor: pointer;
-    transition-property: opacity, filter;
-    transition-duration: 0.15s;
-    transition-timing-function: linear;
-    font: inherit;
-    color: inherit;
-    text-transform: none;
-    background-color: transparent;
-    border: 0;
-    margin: 0;
-    overflow: visible; }
-
-.hamburger:hover {
-      opacity: 0.7; }
-    .hamburger.is-active:hover {
-      opacity: 0.7; }
-    .hamburger.is-active .hamburger-inner,
-    .hamburger.is-active .hamburger-inner::before,
-    .hamburger.is-active .hamburger-inner::after {
-      background-color: #000; }
-  
-.hamburger-box {
-    width: 40px;
-    height: 24px;
-    display: inline-block;
-    position: relative; }
-  
-.hamburger-inner {
-    display: block;
-    top: 50%;
-    margin-top: -2px; }
-
-.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-      width: 40px;
-      height: 4px;
-      background-color: #000;
-      border-radius: 4px;
-      position: absolute;
-      transition-property: transform;
-      transition-duration: 0.15s;
-      transition-timing-function: ease; }
-
-.hamburger-inner::before, .hamburger-inner::after {
-      content: "";
-      display: block; }
-
-.hamburger-inner::before {
-      top: -10px; }
-    
-.hamburger-inner::after {
-      bottom: -10px; }
-
-.hamburger--squeeze .hamburger-inner {
-        transition-duration: 0.075s;
-        transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-.hamburger--squeeze .hamburger-inner::before {
-          transition: top 0.075s 0.12s ease, opacity 0.075s ease; }
-.hamburger--squeeze .hamburger-inner::after {
-          transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-      
-.hamburger--squeeze.is-active .hamburger-inner {
-        transform: rotate(45deg);
-        transition-delay: 0.12s;
-        transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-.hamburger--squeeze.is-active .hamburger-inner::before {
-          top: 0;
-          opacity: 0;
-          transition: top 0.075s ease, opacity 0.075s 0.12s ease; }
-.hamburger--squeeze.is-active .hamburger-inner::after {
-          bottom: 0;
-          transform: rotate(-90deg);
-          transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+/* --------------- hamburger btn ----------------*/
 
 
 /* --------------- 喝酒不開車 ----------------*/
@@ -260,25 +162,25 @@ h3{
     background-image: url(../index/warning400.svg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 65%;
+    background-size: 60%;
     background-color: white;
     position: sticky;
     bottom: 0;
     height: 60px;
-    /* width: 100%;
-    margin: 0 auto; */
+    width: 100%;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 991px){
+/* @media screen and (max-width: 991px){
     .warning{
         width: 100%;
         margin: 0 auto;
     }
-}
+} */
 
 @media (min-width:320px) and (max-width:575.98px){
     .warning{
-        background-size: 60%;
+        background-size: 70%;
     }
 }
 
