--- a/css/bar_style.css
+++ b/css/bar_style.css
@@ -34,7 +34,7 @@
 }
 
 /* ------------------ bartender -------------------*/
-.bartenderIntro{
+/* .bartenderIntro{
     display: flex;
     justify-content: center;
     padding: 20px 120px 20px 120px;
@@ -53,7 +53,24 @@
 .bartenderpic p{
     font-weight: bold;
     padding: 20px;
+} */
+
+/* -------------- world class vedio --------------*/
+.embed-container { 
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; 
+    overflow: hidden; 
+    max-width: 100%;
 }
+.embed-container iframe, .embed-container object, .embed-container embed { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+}
+
 
 /* ------------------ 調酒圖片區 -------------------*/
 .cocktail h3{
