--- a/css/product_style.css
+++ b/css/product_style.css
@@ -51,11 +51,12 @@
 .productList ul{
     overflow: hidden;
     display: table;
+    /* display: flex; */
     margin: 0 auto;
     width: 100%;
 }
 
-@media (max-width: 991px){
+@media (max-width: 767.98px){
     .productList ul{
         display: flex;
         flex-direction: column;
