--- a/css/bar_style.css
+++ b/css/bar_style.css
@@ -103,7 +103,7 @@
 
 /* --------------- 地址 & google map ----------------*/
 .baradd h3{
-    margin: 30px auto;
+    margin-top: 50px;
     text-align: center;
 }
 
