--- a/css/store_style.css
+++ b/css/store_style.css
@@ -13,7 +13,7 @@
 
 .top_banner h2{
     color: whitesmoke;
-
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -23,8 +23,7 @@
 @media screen and (max-width: 991px){
     .top_banner{
         width: 100%;
-        top: 80px;
-        display: block;
+        top: calc(100% - var(--nav-height));
     }
     
     .top_banner h2{
@@ -51,138 +50,73 @@
     }
 }
 /* ------------------ storeitem -------------------*/
-.storeItem{
-    width: 1200px;
-    margin: 0 auto;
-}
-
-.storeItem ul{
-    height: 200px;
-    display: flex;
-    
+.container .row .pic{
     position: relative;
+    padding: 0;
 }
 
-.storeItem li{
-    width: 400px;
-    background-size: cover;
-    background-position: center center;
-}
-
-.s1{
-    background-image: url(../Store/1-100.jpg);
-    flex-grow: 1;
-}
-
-.s2{
-    background-image: url(../Store/9-100.jpg);
-    flex-grow: 1;
-}
-
-.s3{
-    background-image: url(../Store/16-100.jpg);
-    flex-grow: 1;
-}
-
-.s4{
-    background-image: url(../Store/2-100.jpg);
-    flex-grow: 1;
-}
-
-.s5{
-    background-image: url(../Store/7-100.jpg);
-    flex-grow: 1;
-}
-
-.s6{
-    background-image: url(../Store/10-100.jpg);
-    flex-grow: 1;
-}
-
-.s7{
-    background-image: url(../Store/17-100.jpg);
-    flex-grow: 1;
-}
-
-.s8{
-    background-image: url(../Store/28-100.jpg);
-    flex-grow: 1;
-}
-
-.s9{
-    background-image: url(../Store/32-100.jpg);
-    flex-grow: 1;
-}
-
-.s1 p, .s7 p{
-    position: absolute;
-    top: 80px;
-    left: 260px;
-    text-align: center;
-}
-
-.s2 p, .s8 p{
-    position: absolute;
-    top: 80px;
-    left: 645px;
-    text-align: center;
-}
-
-.s4 p{
-    position: absolute;
-    top: 80px;
-    left: 35px;
-    text-align: center;
-}
-
-.s5 p{
-    position: absolute;
-    top: 80px;
-    left: 455px;
-    text-align: center;
-}
-
-.s6 p{
-    position: absolute;
-    top: 80px;
-    right: 240px;
-    text-align: center;
-}
-
-.s9 p{
-    position: absolute;
-    top: 80px;
-    right: 30px;
-    text-align: center;
-}
-
-.s9 i{
-    position: absolute;
-    bottom: 30px;
-    right: 95px;
-    text-align: center;
-    cursor: pointer; 
-}
-
-li:hover {
-    opacity: 0.8;
-}
-
-li:hover p{
-    color: whitesmoke;
-    font-weight: bold;
-}
-
-@media screen and (max-width: 1200px) {
-    .storeItem{
-        max-width: 1200px;
-
-    }
-}
-
-@media screen and (max-width: 991px){
-    .storeItem{
+.container .row .pic img{
     width: 100%;
+    display:block;
+    overflow:hidden;
+    margin: 0 auto;
+  }
+
+.container .row .pic span{
+    display: block;
+    text-align: center;
+}
+
+.title1{
+    position:absolute;
+    display:block;
+    top: 50%;
+    left: 68%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+    text-shadow: 1px 5px 10px black;
+  }
+
+.title2{
+    position:absolute;
+    display:block;
+    top: 50%;
+    left: 62%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+    text-shadow: 1px 5px 10px black;
+}
+
+.title3{
+    position:absolute;
+    display:block;
+    top: 50%;
+    left: 10%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+    text-shadow: 1px 5px 10px black;
+}
+
+.title4{
+    position:absolute;
+    display:block;
+    top: 50%;
+    left: 15%;
+    transform: translateY(-50%);
+    color: whitesmoke;
+    text-shadow: 1px 5px 10px black;
+}
+.title5{
+    position:absolute;
+    display:block;
+    top: 50%;
+    left: 60%;
+    transform: translateY(-50%);
+}
+
+@media (max-width: 767.98px){
+    .container img{
+        padding-bottom: 10px;
     }
 }
 
@@ -197,7 +131,8 @@ li:hover p{
 }
 
 .storeadd iframe{
+    width: 100%;
     display: block;
     margin: 0 auto;
-    padding: 20px;
+    padding: 30px;
 }
