--- a/css/contact.css
+++ b/css/contact.css
@@ -20,6 +20,17 @@
     transform: translate(-50%, -50%);
 }
 
+@media screen and (max-width: 991px){
+    .top_banner{
+        top: calc(100% - var(--nav-height));
+        width: 100%;
+    }
+
+    .top_banner h2{
+        margin: 0 auto;
+        font-size: 3rem;
+    }
+}
 /* ------------------ intro -------------------*/
 .intro{
     margin: 60px;
@@ -30,30 +41,56 @@
 }
 
 /* ------------------ Contact Inner -------------------*/
+.contactInner{
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    
+}
 .contactInner .contactForm{
-    width: 800px;
+    width: 100%;
     margin: 0 auto;
 }
 
-.formItem{
+.contactInner.contactForm.formItem{
     display: flex;
     justify-content: center;
-    margin: 20px;
+    width: 100%;
 }
 
 .formItem input{
     border: 1px solid #1C1C1C;
     border-radius: 3px;
     height: 50px;
-    width: 700px;
+    width: 600px;
+    margin-bottom: 20px;
 }
 
 .formItem textarea{
     border: 1px solid #1C1C1C;
     border-radius: 3px;
     resize:none; 
-    width:700px; 
-    height:200px;
+    width: 600px; 
+    height: 100px;
+    margin-bottom: 20px;
+    margin: 0 auto;
+}
+
+@media (max-width: 767.98px){
+    .contactInner{
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .formItem input{
+        width: 80%;
+    }
+
+    .formItem textarea{
+        width: 80%;
+        margin-bottom: 20px;
+    }
+
 }
 
 /* --------------- agree box ----------------*/
