--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -44,6 +44,11 @@ h3{
     --nav-height: 80px;
 }
 
+@media screen and (max-width:767.98px){
+    h2{
+        font-size: 2.5rem;
+    }
+}
 /* ------------------ nav bar -------------------*/
 .header {
     position: relative;
@@ -279,11 +284,19 @@ h3{
     color: #D98E04;
   }
 
-@media screen and (max-width: 767.98px){
+@media screen and (max-width: 991.98px){
     #topBtn{
         position: fixed; 
-        bottom: 50px; 
-        right: 30px;
+        bottom: 30px; 
+        right: 20px;
+    }
+}
+
+@media screen and (min-width: 320px )and (max-width: 850px){
+    #topBtn{
+        position: fixed; 
+        bottom: 80px; 
+        right: 20px;
     }
     #topBtn i{
         font-size: 32px;
