--- a/css/newNavandFooter.css
+++ b/css/newNavandFooter.css
@@ -47,6 +47,7 @@ h3{
 @media screen and (max-width:767.98px){
     h2{
         font-size: 2.5rem;
+        letter-spacing: 0;
     }
 }
 /* ------------------ nav bar -------------------*/
